--- a/client/html/header.html
+++ b/client/html/header.html
@@ -12,8 +12,8 @@
 
       <ul class="nav navbar-nav">
         {{# if currentUser}}
-          <li><a href="logs">logs</a></li>
-          <li><a href="testPage">testPage</a></li>
+          <li><a href="createSheet">Create New</a></li>
+          <li><a href="listOwnedSheets">List Your Feeds</a></li>
         {{else}} 
         {{/ if}}
       </ul>
