--- a/client/html/createSheet.html
+++ b/client/html/createSheet.html
@@ -25,5 +25,25 @@
       <div class="col-xs-2"></div>
 
     </div>
+        <div class="row">
+      <div class="col-xs-2"></div>
+      <div class="col-xs-8">
+        
+        <div class="form-group">
+          <label for="sel1">Select list:</label>
+          <select class="form-control" id="connectorSelect">
+            <option value="dummy">Select Connector</option>
+            <option value="paste">Paste into Grid</option>
+
+          </select>
+        </div>
+
+      </div>
+      <div class="col-xs-2"></div>
+
+    </div>
+    
+    {{> connector_paste}}
+
   </div>
 </template>
