--- a/client/html/listOwnedSheets.html
+++ b/client/html/listOwnedSheets.html
@@ -14,7 +14,7 @@
       <div class="col-xs-8">
         <ul class="list-group">
           {{# each listSheets}}
-            <li class='list-group-item'>{{sheetName}}</li>
+            <li class='list-group-item'><a href="viewSheet?sheetId={{_id}}">{{sheetName}}</a></li>
           {{/ each}}
         </ul>
 
