Added sql query fixes

--- a/client/html/viewSheet.html
+++ b/client/html/viewSheet.html
@@ -5,8 +5,8 @@
         <div class="page-header">
           <h1>ViewSHeet</h1>
           <a href='#' onclick='downloadCSV({ filename: "stock-data.csv" });'>Download CSV</a>
-          <input type="text" id="sql"/>
-          <div id="testSql">test</div>
+          <input type="text" id="sqlText"/>
+          <div id="runSql">Run</div>
         </div>
       </div>
     </div>
