Added email connector and notes

--- a/client/html/createSheet.html
+++ b/client/html/createSheet.html
@@ -34,7 +34,7 @@
           <select class="form-control" id="connectorSelect">
             <option value="dummy">Select Connector</option>
             <option value="paste">Paste into Grid</option>
-
+            <option value="emailMyself">Email Data to Myself</option>
           </select>
         </div>
 
@@ -44,6 +44,7 @@
     </div>
     
     {{> connector_paste}}
+    {{> connector_emailMyself}}
 
   </div>
 </template>
