added group basics

--- a/client/html/header.html
+++ b/client/html/header.html
@@ -14,6 +14,7 @@
         {{# if currentUser}}
           <li><a href="createSheet">Create New</a></li>
           <li><a href="listOwnedSheets">List Your Feeds</a></li>
+          <li> <a href="listGroups"> Manage Groups</a></li>
         {{else}} 
         {{/ if}}
       </ul>
