--- a/client/workflow/viewer/view.html
+++ b/client/workflow/viewer/view.html
@@ -1,4 +1,4 @@
-<Template name="sheetManagement">
+<Template name="view">
 
 <div class="container-fluid">
 
@@ -14,20 +14,6 @@
 			<div class="row">
 <div class="container-fluid">
 
-  <ul class="nav nav-tabs">
-    <li class="active authorTab"><a data-toggle="tab" href="#authorImport">Source Settings</a></li>
-    <li class="authorTab"><a data-toggle="tab" href="#authorViewRawData" >Source Data</a></li>
-    <li class="authorTab"><a data-toggle="tab" href="#authorTransform">Exctraction Settings</a></li>
-    <li class="authorTab"><a data-toggle="tab" href="#authorViewTransformedData">Extracted Data</a></li>
-	<li class="authorTab"><a data-toggle="tab" href="#authorShareData">Share Settings</a></li>
-	<li class="authorTab"><a data-toggle="tab" href="#authorViewSharedData">Shared Data</a></li>
-	<!--
-	<li class="editorTab"><a data-toggle="tab" href="#editorViewSharedData">Raw Data</a></li>
-	<li class="editorTab"><a data-toggle="tab" href="#editorTransform">Transform</a></li>
-	<li class="editorTab"><a data-toggle="tab" href="#editorViewTransformedData">View Transformed Data</a></li>
-	<li class="viewerTab"><a data-toggle="tab" href="#viewData">View Data</a></li>
-	-->
-  </ul>
 
   <div class="tab-content">
     <div id="authorImport" class="tab-pane fade in active authorTab">
