--- a/client/workflow/viewer/view.html
+++ b/client/workflow/viewer/view.html
@@ -9,63 +9,12 @@
 
 </div>
 </div>
-<div class="row">
-<div class="col-xs-12">
-			<div class="row">
-<div class="container-fluid">
-
-
-  <div class="tab-content">
-    <div id="authorImport" class="tab-pane fade in active authorTab">
-      <div class="row">
-      {{> import}}
-      </div>
-    </div>
-    <div id="authorViewRawData" class="tab-pane fade">
-      <div class="row">
-{{> authorViewRawData}}
-      </div>
-    </div>
-    <div id="authorTransform" class="tab-pane fade authorTab">
-      <div class="row">
-
-        <div class="col-xs-12">{{> authorTransform}}</div>
-
-      
-      </div>
-    </div>
-    <div id="authorViewTransformedData" class="tab-pane fade authorTab">
-      <div class="row">
-        <div class="col-xs-12">
-      {{> authorViewTransformedData}}
-      </div>
-      </div>
-    </div>
-    <div id="authorShareData" class="tab-pane fade authorTab">
-        {{> authorShareData}}
-    </div>
-    <div id="authorViewSharedData" class="tab-pane fade authorTab">
-      {{> authorViewSharedData}}
-    </div>
-    <!--
-	 <div id="editorViewSharedData" class="tab-pane fade editorTab">
-      <h3>#editorViewSharedData</h3>
-    </div>
-	<div id="editorTransform" class="tab-pane fade editorTab">
-      <h3>#editorTransform</h3>
-    </div>
-	 <div id="editorViewTransformedData" class="tab-pane fade editorTab">
-      <h3>#editorViewTransformedData</h3>
-    </div>
-	<div id="viewData" class="tab-pane fade viewerTab">
-      <h3>#viewData</h3>
-    </div>
-    -->
+  <div class="row">
+    <div class="col-xs-12">
+  <div id="viewDataGrid"></div>
+  
   </div>
-</div>
-			</div>
-		</div>
-	</div>
+  </div>
 
 </div>
 </Template>
