--- a/client/html/header.html
+++ b/client/html/header.html
@@ -7,7 +7,7 @@
           <span class="sr-only">Toggle navigation</span>
 
         </button>
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" href="listOwnedSheets">DataGator R01</a>
       </div>
 
       <ul class="nav navbar-nav">
