--- a/client/html/listGroups.html
+++ b/client/html/listGroups.html
@@ -10,15 +10,16 @@
       <div class="col-xs-2"></div>
     </div>
     <div class="row">
-        <div class="col-xs-12">
-      <button class="button btn btn-primary" id='createGroupButton'>Create New</button>
+      <div class="col-xs-2"></div>
+        <div class="col-xs-8">
+      <button class="button btn btn-primary slightMarginTopBottom" id='createGroupButton'>Create New</button>
         </div>
+      <div class="col-xs-2"></div>  
     </div>
     <div class="row">
       <div class="col-xs-2"></div>
       <div class="col-xs-8">
         <ul class="list-group" id="groupListings">
-          <li class="list-group-item">First item</li>
   {{#each groups}}
      <li class="list-group-item"><a href="editGroup?groupId={{_id}}"> {{groupName}} </a></li>
   {{/each}}
