--- a/client/html/listOwnedSheets.html
+++ b/client/html/listOwnedSheets.html
@@ -1,4 +1,6 @@
 <template name="listOwnedSheets">
+
+
   <div class="container">
     <div class="row">
       <div class="col-xs-2"></div>
@@ -10,18 +12,37 @@
       <div class="col-xs-2"></div>
     </div>
     <div class="row">
-      <div class="col-xs-2"></div>
-      <div class="col-xs-8">
-        <ul class="list-group">
-          {{#each listSheets}}
-            <li class='list-group-item'><a href="sheetManagement?sheetId={{_id}}">{{sheetName}}</a></li>
-          {{/each}}
-        </ul>
+    <ul class="nav nav-tabs">
+      <li class="active authorTab"><a data-toggle="tab" href="#yourFeeds">Your Feeds</a></li>
+      <li class="authorTab"><a data-toggle="tab" href="#sharedFeeds">Shared Feeds</a></li>
 
+      <!-- <li class="active authorTab"><a data-toggle="tab" href="#authorImport">Public Feeds</a></li>-->
+    </ul>
+  </div>
+  <div class="row">
+    <div class="tab-content">
+      <div id="yourFeeds" class="tab-pane fade in active authorTab">
+        <div class="row">
+          <div class="col-xs-2"></div>
+          <div class="col-xs-8">
+            <ul class="list-group">
+              {{#each listSheets}}
+              <li class='list-group-item'><a href="sheetManagement?sheetId={{_id}}">{{sheetName}}</a></li>
+              {{/each}}
+            </ul>
+
+          </div>
+          <div class="col-xs-2"></div>
+
+        </div>
       </div>
-      <div class="col-xs-2"></div>
-
+      <div id="sharedFeeds" class="tab-pane fade">
+        {{> listSharedFeeds}}
+      </div>
     </div>
   </div>
-</template>
 
+
+
+  </div>
+</template>
