--- a/client/html/createSheet.html
+++ b/client/html/createSheet.html
@@ -36,6 +36,7 @@
             <option value="dummy">Select Connector</option>
             <option value="paste">Paste into Grid</option>
             <option value="emailMyself">Email Data to Myself</option>
+            <!--<option value="upload">Upload a file</option>-->
           </select>
         </div>
 
@@ -54,6 +55,7 @@
 
     </div>
     {{> connector_paste}} {{> connector_emailMyself}}
+    <!--{{> connector_upload}}-->
 
   </div>
 </template>
